src/Services/loanServices/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loan-services
  labels:
    name: loan-services
    app.kubernetes.io/part-of: loan-erpms
